--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
